# RSCE

./: .env.example  .gitignore  .graphifyignore  ARCHITECTURE_DIAGRAM.md  BUGS_FOUND.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  research_synthesis_engine_design.md
.github/workflows/: test.yml
Stuff/: 2_implementation_plan.md  3_codebase_review.md  4_codebase_rating.md  5_codebase_rating.md  6_codebase_rating.md
api/: app.py  schemas.py
api/routes/: analysis.py  results.py
data/: demo_seed.json  synonym_map.json
docs/: deployment_guide.md
evaluation/: scifact_eval.py
evaluation/results/: scifact_results.json  scifact_results_full.json  scifact_results_n2.json  scifact_results_n60.json
frontend/: README.md  package-lock.json  package.json
scripts/: seed_demo.py
src/: __init__.py  config.py  main.py  pipeline.py
src/llm/: __init__.py  (+3 more)
tests/: conftest.py  test_api.py  test_claim_extractor.py  test_claim_graph.py  test_cli_report.py  test_config_fixes.py  test_contradiction_detector.py  test_database.py  test_database_fixes.py  test_date_journal_filters.py  test_embedder.py  test_factory.py  test_faiss_caching.py  test_faiss_index.py  test_gemini.py  test_graph_export.py  test_integration.py  test_json_export.py  test_knowledge_gaps.py  test_large_claim_counts.py  test_llm_cache.py  test_llm_judge.py  test_main.py  test_nli_scorer.py  test_normalizer.py  test_openai.py  test_pdf_fallback.py  test_pipeline.py  test_pmc_xml.py  test_pubmed.py  test_quote_verifier.py  test_report_generator.py  test_seed_claim.py  test_temporal.py
(+42 files in other folders)
